[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.portray]
modules = ["dicebear"]
output_dir = "docs"

[tool.portray.mkdocs.theme]
favicon = "images/favicon.png"
logo = "images/favicon.png"
name = "gitbook"
hljs_languages = ["python"]
colorscheme = "Atom One Dark"