[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.portray]
modules = ["dicebear"]
output_dir = "docs"

[tool.portray.repository]
repo_url = "https://github.com/jvherck/dicebear"

[tool.portray.mkdocs.theme]
favicon = "images/favicon.png"
logo = "images/favicon.png"
name = "readthedocs"
highlightjs = true
hljs_languages = ["python"]